some changes and lidar tesitng before larger changes for final

--- a/HRI Platform IO/platformio.ini
+++ b/HRI Platform IO/platformio.ini
@@ -15,4 +15,8 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.13
 	electroniccats/MPU6050@^1.4.1
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^7.2.1
+	adafruit/Adafruit VL53L1X@^3.1.2
+	adafruit/Adafruit_VL53L0X@^1.2.4
 monitor_speed = 115200
